@@ -948,6 +948,7 @@ about.text=jEdit is brought to you by\n\
 	Richard Beton\n\
 	Rick Gibbs\n\
 	Rick Owen\n\
+	Robert McKinnon\n\
 	Robert Swarr\n\
 	Romain Guy\n\
 	Rudolf Widmann\n\
